# agentic_project

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  config.py  fast_pdf_parser.py  main.py  pyproject.toml
agent/: graph.py  state.py
agent/nodes/: inner_loop.py  outer_loop.py  router.py
agent/prompts/: sys_prompts.py  user_prompt.py
clients/: competition_client.py  llm_client.py
core/: checkpoint.py  exceptions.py  logger.py
models/: api_schemas.py  llm_schemas.py
src/devday_agent/: main.py
src/devday_agent.egg-info/: PKG-INFO
src/devday_agent/agent/: graph.py  state.py
src/devday_agent/agent/nodes/: inner_loop.py  outer_loop.py  router.py
src/devday_agent/agent/prompts/: user_prompt.py
src/devday_agent/clients/: competition_client.py  llm_client.py
src/devday_agent/core/: checkpoint.py  exceptions.py  logger.py
src/devday_agent/tools/: context_manager.py  document_parser.py  rag_engine.py  vision_tool.py
src/tests/: test_context_manager.py  test_document_parser.py  test_forced_vision_keyword.py  test_inner_loop_verifiability.py  test_llm_client_overflow.py  test_outer_loop.py  test_planning_hints.py  test_qa_grounding_guards.py  test_rag_engine.py
tests/: test_context_manager.py  test_document_parser.py  test_forced_vision_keyword.py  test_inner_loop_verifiability.py  test_llm_client_overflow.py  test_outer_loop.py  test_planning_hints.py  test_rag_engine.py
tools/: context_manager.py  document_parser.py  rag_engine.py  vision_tool.py
