[project]
name = "devday-agent-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor>=1.7.2",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "markitdown[all]>=0.1.5",
    "openai>=1.0.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.12.0",
    "accelerate>=1.13.0",
]

[project.optional-dependencies]
ocr = [
    "qwen-vl-utils>=0.0.14",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
]
