[project]
name = "devday-agent"
version = "0.1.0"
description = "DUT_Trust VPP AI Challenge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor>=1.14.5",
    "httpx>=0.28.1",
    "openai>=1.109.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "langchain-core>=1.2.20",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "langchain-classic>=1.0.3",
    "langgraph>=1.1.3",
    "pymupdf>=1.27.2.2",
    "pymupdf4llm>=1.27.2.2",
    "sentence-transformers>=5.3.0",
    "rapidocr-onnxruntime>=1.3.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]
